--- a/data/strings.txt.html
+++ b/data/strings.txt.html
@@ -4,7 +4,4 @@
 &nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> first1=</font><font color=#04B404>"123 | search | 456"</font><font color=black></p>
 &nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> second2=</font><font color=#04B404>"123 | 'search | 456'"</font><font color=black></p>
 &nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> third3=</font><font color=#04B404>"123 | \"search | 456\""</font><font color=black></p>
-&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>table</font><font color=black></p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>,</font><font color=black>  first1</p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>,</font><font color=black> second2</p>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>,</font><font color=black> third3</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>table</font><font color=black> </font><font color=black>,</font><font color=black>  first1, second2, third3</p>
