--- a/data/eval-if.txt.html
+++ b/data/eval-if.txt.html
@@ -2,7 +2,7 @@
 </font><font color=black></p>
 &nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>metadata</font><font color=black> </font><font color=blue>type</font><font color=black>=hosts index=_internal</p>
 &nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>search</font><font color=black> NOT(host=</font><font color=#04B404>"YourSplunkServers"</font><font color=black>)</p>
-&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>table</font><font color=black> host </font><font color=black>,</font><font color=black>  recentTime</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>table</font><font color=black> host recentTime</p>
 &nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> age=now()-recentTime</p>
-&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> status=if(age&lt300,</font><font color=#04B404>"UP"</font><font color=black>,</font><font color=#04B404>"DOWN"</font><font color=black>)</p>
-&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>table</font><font color=black> host, status</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>eval</font><font color=black> status=if(age&lt300 </font><font color=black>,</font><font color=black> </font><font color=#04B404>"UP"</font><font color=black>,</font><font color=#04B404>"DOWN"</font><font color=black>)</p>
+&nbsp;&nbsp;&nbsp;</font><font color=black></font><font color=black>|</font><font color=black> </font><font color=blue>table</font><font color=black> host status</p>
